# cpp-programming-2024

./: README.md
Bank/: Makefile  README.md  bank.cpp  bank.h  bankaccount.cpp  helper.cpp  helper.h  main.cpp
Project/: CMakeLists.txt
Project/include/: column.h  data_line.h  dataset.h  enums.h  utility.h
Project/src/: column.cpp  data_line.cpp  dataset.cpp
Project/tests/: test_data.csv  test_data.txt  test_dataset.cpp
StringOperator/: README.md
TemplateArray/: CMakeLists.txt
TemplateArray/include/: array_template.h
TemplateArray/tests/: test_array.cpp
Test/: CMakeLists.txt
Test/bank_src/: bank.cpp  bank.h  bankaccount.h
Test/tests/: bank_and_account_test.cpp  texteditor_test.cpp
Test/text_editor_src/: texteditor.cpp  texteditor.h
TextEditor/: Makefile  README.md  helper.cpp  helper.h  main.cpp  texteditor.cpp  texteditor.h
